Add shortcut state support
