# apps/backend/openapi.yaml
@@ -800,6 +800,16 @@ paths:
       responses:
         "200":
           $ref: "#/components/responses/JsonOk"
+  /searchItems/action:
+    post:
+      tags:
+        - search
+      summary: Execute a stateful search item action
+      requestBody:
+        $ref: "#/components/requestBodies/JsonBody"
+      responses:
+        "200":
+          $ref: "#/components/responses/JsonOk"
   /pageConfig:
     get:
       tags:
